--- a/index.html
+++ b/index.html
@@ -300,8 +300,9 @@
               <h5>Allure & HTML Reports</h5>
               <p class="small text-muted">Allure and HTML test reports for automation and JMeter results.</p>
               <div class="d-flex gap-2 mt-2">
-                <a class="btn btn-sm btn-outline-light" target="_blank" href="https://allurereportpytest.netlify.app">Allure</a>
+                <a class="btn btn-sm btn-outline-light" target="_blank" href="https://allurereportpytest.netlify.app">Allure Report</a>
                 <a class="btn btn-sm btn-outline-light" target="_blank" href="https://pytestproject.netlify.app">HTML Report</a>
+                <a class="btn btn-sm btn-outline-light" target="_blank" href="https://github.com/fuzayelqa/assignment-api">API Test Peoject & Newman Report</a>
               </div>
             </div>
           </div>
@@ -454,3 +455,4 @@
   </script>
 </body>
 </html>
+
