--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
               <div class="d-flex gap-2 mt-2">
                 <a class="btn btn-sm btn-outline-light" target="_blank" href="https://allurereportpytest.netlify.app">Allure Report</a>
                 <a class="btn btn-sm btn-outline-light" target="_blank" href="https://pytestproject.netlify.app">HTML Report</a>
-                <a class="btn btn-sm btn-outline-light" target="_blank" href="https://github.com/fuzayelqa/assignment-api">API Test Peoject & Newman Report</a>
+                <a class="btn btn-sm btn-outline-light" target="_blank" href="https://github.com/fuzayelqa/assignment-api">Newman Report</a>
+                <a class="btn btn-sm btn-outline-light" target="_blank" href="https://jmetertestresult.netlify.app/">JMeter Report</a>
               </div>
             </div>
           </div>
@@ -455,4 +456,5 @@
   </script>
 </body>
 </html>
+
 
